@@ -8,7 +8,7 @@
 \title{Column Indexes}
 \description{
   Returns a matrix of integers indicating their column number in a
-  matrix-like object.
+  matrix-like object, or a factor of column labels.
 }
 \usage{
 col(x, as.factor = FALSE)
@@ -17,7 +17,8 @@ col(x, as.factor = FALSE)
   \item{x}{a matrix-like object, that is one with a two-dimensional
     \code{dim}.} 
   \item{as.factor}{a logical value indicating whether the value should
-    be returned as a factor rather than as numeric.}
+    be returned as a factor of column labels (created if necessary)
+    rather than as numbers.}
 }
 \value{
   An integer matrix with the same dimensions as \code{x} and whose
